<resources>
    <string name="app_name">Nt Taxi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Nt Taxi</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--loginActivity Strings-->
    <string name="login_button_text">LOGIN</string>
    <string name="email_text_hint">Email</string>
    <string name="password_text_hint">Password</string>
    <string name="name_text_hint">Name</string>
    <string name="phoneNumber_text_hint">Phone Number</string>
    <string name="Already_a_member_Login">Already a member? Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="unsuccesfull_login_message">Invalid Email or Password</string>
    <string name="successfull_login_welcome_message">Welcome</string>
    <string name="successfullu_registerd">Welcome You successfully Registered ( Enjoy :) ) </string>
    <string name="register_email_already_used">Email Already Used</string>

</resources>
