<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:fitsSystemWindows="true"
    tools:context="android.example.com.nttaxi.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginImagHeight"
            android:layout_gravity="center_horizontal"
            android:layout_margin="24dp"
            android:src="@drawable/taxi_logo" />

        <!-- Email Label -->
        <EditText
            android:id="@+id/input_email"
            style="@style/LoginFieldStyle"
            android:hint="@string/email_text_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/input_password"
            style="@style/LoginFieldStyle"
            android:hint="@string/password_text_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/loginActvityMargin"
            android:layout_marginTop="@dimen/loginActvityMargin"
            android:background="@color/loginButtonColor"
            android:onClick="login"
            android:textColor="@android:color/white"
            android:text="@string/login_button_text" />

        <TextView
            android:id="@+id/link_signup"
            style="@style/LoginFieldStyle"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="openRegisterActivity"
            android:text="@string/no_account" />

    </LinearLayout>
</ScrollView>